--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <html><body>
 <h1>Hello world!</h1>
+<meta property="og:title" content="apex_util.get_blob" />
+<meta property="og:type" content="article" />
+<meta property="og:url" content="site.com" />
+<meta property="og:description" content="Dear Parents, it has come to my attention that there are fake Instagram accounts targetting students of Year 10 to cyberbullying." />
 </body></html>
